// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArtworkItem /> 이미지를 표시한다 1`] = `
.c2 {
  font-weight: 600;
  font-size: 1.5rem;
  margin: 0;
}

.c7 {
  font-weight: 400;
  font-size: 1.125rem;
  margin: 0;
}

.c9 {
  margin-right: 0.25rem;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  border-radius: 0.25rem;
  white-space: nowrap;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 200;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
  border: 0.0625rem solid #E0E0E0;
  background-color: #FFF;
  cursor: pointer;
  -webkit-transition: background-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,box-shadow 0.2s;
}

.c0:hover {
  background-color: #FAFAFA;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 10rem;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
}

.c4 {
  width: 0.0625rem;
  margin: 0 1rem;
}

.c6 {
  width: 100%;
  overflow: scroll;
  white-space: nowrap;
}

.c6::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: scroll;
}

.c8::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.c10 {
  height: 5.75rem;
  margin: -1rem;
  margin-left: auto;
}

@media (max-width:639px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:639px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:639px) {
  .c4 {
    width: 100%;
    height: 0.0625rem;
    margin: 1rem 0;
  }
}

@media (max-width:639px) {
  .c6 {
    text-align: center;
    margin-bottom: 0.5rem;
  }
}

<ArtworkItem
  artwork={
    Object {
      "artist": "nagatsuki taffee",
      "code": 112047,
      "imageUrl": "https://cdn.namuwikiusercontent.com/s/3f75b87a3b69db1af44479a12315ed58c7e6121c2842cf929209cbf74fa23b7b214a9124e7e494f6ffc8312bdcf231d53278bdf5e7330fb8b23c59ac2ebaf299a3775c6479795372d4b4be0533d58d63?e=1535506665&k=FZxNDPx_iAUdg9ZFqsqXGg",
      "tags": Array [
        "rebirth",
        "loop",
        "harem",
        "this is a long tag",
      ],
      "title": "Re: 제로부터 시작하는 이세계 생활",
    }
  }
  showImage={true}
  theme={
    Object {
      "fonts": Object {
        "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
        "monospace": "'Monaco', 'Consolas'",
      },
      "palette": Object {
        "gray": Object {
          "10": "#FAFAFA",
          "100": "#212121",
          "20": "#F5F5F5",
          "30": "#EEEEEE",
          "40": "#E0E0E0",
          "50": "#BDBDBD",
          "60": "#9E9E9E",
          "70": "#757575",
          "80": "#616161",
          "90": "#424242",
        },
        "red": Object {
          "default": "#FF8787",
        },
        "transparent": Object {
          "default": "transparent",
        },
        "white": Object {
          "default": "#FFF",
        },
        "yellow": Object {
          "default": "#F9D14C",
        },
      },
      "sizes": Object {},
    }
  }
>
  <Wrapper
    theme={
      Object {
        "fonts": Object {
          "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
          "monospace": "'Monaco', 'Consolas'",
        },
        "palette": Object {
          "gray": Object {
            "10": "#FAFAFA",
            "100": "#212121",
            "20": "#F5F5F5",
            "30": "#EEEEEE",
            "40": "#E0E0E0",
            "50": "#BDBDBD",
            "60": "#9E9E9E",
            "70": "#757575",
            "80": "#616161",
            "90": "#424242",
          },
          "red": Object {
            "default": "#FF8787",
          },
          "transparent": Object {
            "default": "transparent",
          },
          "white": Object {
            "default": "#FFF",
          },
          "yellow": Object {
            "default": "#F9D14C",
          },
        },
        "sizes": Object {},
      }
    }
  >
    <div
      className="c0"
    >
      <HeadingArea>
        <div
          className="c1"
        >
          <Heading
            font="default"
            fontWeight={600}
            level={3}
          >
            <Component
              className="c2"
              font="default"
              fontWeight={600}
              level={3}
            >
              <h3
                className="c2"
                font="default"
                fontWeight={600}
              >
                #
                112047
              </h3>
            </Component>
          </Heading>
          <Text
            color="gray.50"
            font="default"
            fontSize={12}
            fontWeight={200}
            small={true}
          >
            <SmallText
              color="gray.50"
              font="default"
              fontSize={12}
              fontWeight={200}
            >
              <small
                className="c3"
                color="gray.50"
                fontSize={12}
                fontWeight={200}
              >
                by 
                nagatsuki taffee
              </small>
            </SmallText>
          </Text>
        </div>
      </HeadingArea>
      <Divider>
        <div
          className="c4"
        />
      </Divider>
      <InfoArea>
        <div
          className="c5"
        >
          <Title
            fontWeight={400}
            level={5}
          >
            <Heading
              className="c6"
              font="default"
              fontWeight={400}
              level={5}
            >
              <Component
                className="c6 c7"
                font="default"
                fontWeight={400}
                level={5}
              >
                <h5
                  className="c6 c7"
                  font="default"
                  fontWeight={400}
                >
                  Re: 제로부터 시작하는 이세계 생활
                </h5>
              </Component>
            </Heading>
          </Title>
          <TagArea>
            <div
              className="c8"
            >
              <StyledTag>
                <Component
                  className=""
                >
                  <Tag
                    className=""
                  >
                    <div
                      className="c9"
                    />
                  </Tag>
                </Component>
              </StyledTag>
              <Tag
                key="rebirth"
              >
                <div
                  className="c9"
                >
                  rebirth
                </div>
              </Tag>
              <Tag
                key="loop"
              >
                <div
                  className="c9"
                >
                  loop
                </div>
              </Tag>
              <Tag
                key="harem"
              >
                <div
                  className="c9"
                >
                  harem
                </div>
              </Tag>
              <Tag
                key="this is a long tag"
              >
                <div
                  className="c9"
                >
                  this is a long tag
                </div>
              </Tag>
            </div>
          </TagArea>
        </div>
      </InfoArea>
      <Image
        alt=""
        src="https://cdn.namuwikiusercontent.com/s/3f75b87a3b69db1af44479a12315ed58c7e6121c2842cf929209cbf74fa23b7b214a9124e7e494f6ffc8312bdcf231d53278bdf5e7330fb8b23c59ac2ebaf299a3775c6479795372d4b4be0533d58d63?e=1535506665&k=FZxNDPx_iAUdg9ZFqsqXGg"
      >
        <img
          alt=""
          className="c10"
          src="https://cdn.namuwikiusercontent.com/s/3f75b87a3b69db1af44479a12315ed58c7e6121c2842cf929209cbf74fa23b7b214a9124e7e494f6ffc8312bdcf231d53278bdf5e7330fb8b23c59ac2ebaf299a3775c6479795372d4b4be0533d58d63?e=1535506665&k=FZxNDPx_iAUdg9ZFqsqXGg"
        />
      </Image>
    </div>
  </Wrapper>
</ArtworkItem>
`;

exports[`<ArtworkItem /> 정상적으로 렌더링된다 1`] = `
.c2 {
  font-weight: 600;
  font-size: 1.5rem;
  margin: 0;
}

.c7 {
  font-weight: 400;
  font-size: 1.125rem;
  margin: 0;
}

.c9 {
  margin-right: 0.25rem;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  border-radius: 0.25rem;
  white-space: nowrap;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 200;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
  border: 0.0625rem solid #E0E0E0;
  background-color: #FFF;
  cursor: pointer;
  -webkit-transition: background-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,box-shadow 0.2s;
}

.c0:hover {
  background-color: #FAFAFA;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 10rem;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
}

.c4 {
  width: 0.0625rem;
  margin: 0 1rem;
}

.c6 {
  width: 100%;
  overflow: scroll;
  white-space: nowrap;
}

.c6::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: scroll;
}

.c8::-webkit-scrollbar {
  width: 0;
  height: 0;
}

@media (max-width:639px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:639px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:639px) {
  .c4 {
    width: 100%;
    height: 0.0625rem;
    margin: 1rem 0;
  }
}

@media (max-width:639px) {
  .c6 {
    text-align: center;
    margin-bottom: 0.5rem;
  }
}

<ArtworkItem
  artwork={
    Object {
      "artist": "nagatsuki taffee",
      "code": 112047,
      "imageUrl": "https://cdn.namuwikiusercontent.com/s/3f75b87a3b69db1af44479a12315ed58c7e6121c2842cf929209cbf74fa23b7b214a9124e7e494f6ffc8312bdcf231d53278bdf5e7330fb8b23c59ac2ebaf299a3775c6479795372d4b4be0533d58d63?e=1535506665&k=FZxNDPx_iAUdg9ZFqsqXGg",
      "tags": Array [
        "rebirth",
        "loop",
        "harem",
        "this is a long tag",
      ],
      "title": "Re: 제로부터 시작하는 이세계 생활",
    }
  }
  showImage={false}
  theme={
    Object {
      "fonts": Object {
        "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
        "monospace": "'Monaco', 'Consolas'",
      },
      "palette": Object {
        "gray": Object {
          "10": "#FAFAFA",
          "100": "#212121",
          "20": "#F5F5F5",
          "30": "#EEEEEE",
          "40": "#E0E0E0",
          "50": "#BDBDBD",
          "60": "#9E9E9E",
          "70": "#757575",
          "80": "#616161",
          "90": "#424242",
        },
        "red": Object {
          "default": "#FF8787",
        },
        "transparent": Object {
          "default": "transparent",
        },
        "white": Object {
          "default": "#FFF",
        },
        "yellow": Object {
          "default": "#F9D14C",
        },
      },
      "sizes": Object {},
    }
  }
>
  <Wrapper
    theme={
      Object {
        "fonts": Object {
          "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
          "monospace": "'Monaco', 'Consolas'",
        },
        "palette": Object {
          "gray": Object {
            "10": "#FAFAFA",
            "100": "#212121",
            "20": "#F5F5F5",
            "30": "#EEEEEE",
            "40": "#E0E0E0",
            "50": "#BDBDBD",
            "60": "#9E9E9E",
            "70": "#757575",
            "80": "#616161",
            "90": "#424242",
          },
          "red": Object {
            "default": "#FF8787",
          },
          "transparent": Object {
            "default": "transparent",
          },
          "white": Object {
            "default": "#FFF",
          },
          "yellow": Object {
            "default": "#F9D14C",
          },
        },
        "sizes": Object {},
      }
    }
  >
    <div
      className="c0"
    >
      <HeadingArea>
        <div
          className="c1"
        >
          <Heading
            font="default"
            fontWeight={600}
            level={3}
          >
            <Component
              className="c2"
              font="default"
              fontWeight={600}
              level={3}
            >
              <h3
                className="c2"
                font="default"
                fontWeight={600}
              >
                #
                112047
              </h3>
            </Component>
          </Heading>
          <Text
            color="gray.50"
            font="default"
            fontSize={12}
            fontWeight={200}
            small={true}
          >
            <SmallText
              color="gray.50"
              font="default"
              fontSize={12}
              fontWeight={200}
            >
              <small
                className="c3"
                color="gray.50"
                fontSize={12}
                fontWeight={200}
              >
                by 
                nagatsuki taffee
              </small>
            </SmallText>
          </Text>
        </div>
      </HeadingArea>
      <Divider>
        <div
          className="c4"
        />
      </Divider>
      <InfoArea>
        <div
          className="c5"
        >
          <Title
            fontWeight={400}
            level={5}
          >
            <Heading
              className="c6"
              font="default"
              fontWeight={400}
              level={5}
            >
              <Component
                className="c6 c7"
                font="default"
                fontWeight={400}
                level={5}
              >
                <h5
                  className="c6 c7"
                  font="default"
                  fontWeight={400}
                >
                  Re: 제로부터 시작하는 이세계 생활
                </h5>
              </Component>
            </Heading>
          </Title>
          <TagArea>
            <div
              className="c8"
            >
              <StyledTag>
                <Component
                  className=""
                >
                  <Tag
                    className=""
                  >
                    <div
                      className="c9"
                    />
                  </Tag>
                </Component>
              </StyledTag>
              <Tag
                key="rebirth"
              >
                <div
                  className="c9"
                >
                  rebirth
                </div>
              </Tag>
              <Tag
                key="loop"
              >
                <div
                  className="c9"
                >
                  loop
                </div>
              </Tag>
              <Tag
                key="harem"
              >
                <div
                  className="c9"
                >
                  harem
                </div>
              </Tag>
              <Tag
                key="this is a long tag"
              >
                <div
                  className="c9"
                >
                  this is a long tag
                </div>
              </Tag>
            </div>
          </TagArea>
        </div>
      </InfoArea>
    </div>
  </Wrapper>
</ArtworkItem>
`;
